# bg-generation-penrose

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp.yml
src/: geometry.hpp  main.cpp  penrose.hpp  save.hpp
